--- a/Makefile.config
+++ b/Makefile.config
@@ -15,8 +15,11 @@ endif
 PIN_HOME ?= $(SIM_ROOT)/pin_kit
 
 
-CC ?= gcc
-CXX ?= g++
+CC = gcc-4.7
+CXX = g++-4.7
+
+# If your boost installation directory is different from default location
+BOOST_INCLUDE=/usr/local/include/
 
 
 ifneq ($(DEBUG_SHOW_COMPILE),)
